--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 <li><a href="">基本知識</a>
 	<ul>
-	<li><a href="service.html">概要欄・マナー</a></li>
+	<li><a href="service.html">概要欄・ルール</a></li>
 	<li><a href="service2.html">コメント</a></li>
 	<li><a href="service3.html">プラットフォーム</a></li>
 	</ul>
@@ -133,7 +133,7 @@
 
 <ul id="footermenu">
 	<li><a href="index.html">ホーム</a></li>
-	<li><a href="service.html">概要欄・マナー</a></li>
+	<li><a href="service.html">概要欄・ルール</a></li>
 	<li><a href="service2.html">コメント</a></li>
 	<li><a href="service3.html">プラットフォーム</a></li>
 	<li><a href="search.html">配信の探し方</a></li>
