--- a/service.html
+++ b/service.html
@@ -24,7 +24,7 @@
 	<li><a href="index.html">ホーム</a></li>
 	<li><a href="">基本知識</a>
 		<ul>
-		<li><a href="service.html">概要欄・マナー</a></li>
+		<li><a href="service.html">概要欄・ルール</a></li>
 		<li><a href="service2.html">コメント</a></li>
 		<li><a href="service3.html">プラットフォーム</a></li>
 		</ul>
@@ -44,7 +44,7 @@
 
 <section>
 
-<h2 class="c"><span class="fade-in-text">概要</span><span class="hosoku">配信を見る上での注意点</span></h2>
+<h2 class="c"><span class="fade-in-text">ルール</span><span class="hosoku">配信を見る上での注意点</span></h2>
 
 <h2>概要欄</h2>
 <h1>概要欄は必ず読みましょう</h1>
@@ -126,7 +126,7 @@
 
 <ul id="footermenu">
 	<li><a href="index.html">ホーム</a></li>
-	<li><a href="service.html">概要欄・マナー</a></li>
+	<li><a href="service.html">概要欄・ルール</a></li>
 	<li><a href="service2.html">コメント</a></li>
 	<li><a href="service3.html">プラットフォーム</a></li>
 	<li><a href="search.html">配信の探し方</a></li>
