--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <li><a href="">基本知識</a>
 	<ul>
 	<li><a href="service.html">概要欄・ルール</a></li>
-	<li><a href="service2.html">コメント</a></li>
+	<li><a href="service2.html">コメント・カテゴリー</a></li>
 	<li><a href="service3.html">プラットフォーム</a></li>
 	</ul>
 </li>
@@ -89,7 +89,7 @@
 
 <section>
 
-	<h2>配信者イベント歴</h2>
+	<h2>配信者イベント</h2>
 	
 	<table class="ta1">
 	<tr>
@@ -134,7 +134,7 @@
 <ul id="footermenu">
 	<li><a href="index.html">ホーム</a></li>
 	<li><a href="service.html">概要欄・ルール</a></li>
-	<li><a href="service2.html">コメント</a></li>
+	<li><a href="service2.html">コメント・カテゴリー</a></li>
 	<li><a href="service3.html">プラットフォーム</a></li>
 	<li><a href="search.html">配信の探し方</a></li>
 </ul>
