--- a/service2.html
+++ b/service2.html
@@ -25,7 +25,7 @@
 	<li><a href="">基本知識</a>
 		<ul>
 		<li><a href="service.html">概要欄・ルール</a></li>
-		<li><a href="service2.html">コメント</a></li>
+		<li><a href="service2.html">コメント・カテゴリー</a></li>
 		<li><a href="service3.html">プラットフォーム</a></li>
 		</ul>
 	</li>
@@ -96,7 +96,7 @@
 	<ul id="footermenu">
 		<li><a href="index.html">ホーム</a></li>
 		<li><a href="service.html">概要欄・ルール</a></li>
-		<li><a href="service2.html">コメント</a></li>
+		<li><a href="service2.html">コメント・カテゴリー</a></li>
 		<li><a href="service3.html">プラットフォーム</a></li>
 		<li><a href="search.html">配信の探し方</a></li>
 	</ul>
