--- a/service2.html
+++ b/service2.html
@@ -71,20 +71,32 @@
 	当事者が配信に来ることもあるので、オープンなコメント欄で、誰かが傷つく発言はやめましょう。もちろん雰囲気も悪くなります。
 	チャット欄が荒れていると、配信に来る人が減ってしまう要因になります。</p>
 
-<h2>ゲーム配信</h2>
-	<h1>禁止行為</h1>
-	<p>ゴースティング・オンライン対戦ゲームにおいて、実況・ライブ配信映像を視聴しながら試合に参加し、プレイヤーを狙い撃ち、ゲームを自分に有利な方向に進める不正行為のこと。<br>
-		由来は幽霊の「ghost」特定のプレイヤーに対して執拗につきまとう様子を幽霊に例えられるから<br><br>
-	
-		スナイプ・とは、特定のプレイヤーと同じマッチ内に入るのを意図的に狙うことを意味した言葉。本来の意味は「狙い撃つ」で、FPSなどで遠距離から敵を狙う「スナイパー」もこの言葉から来ている。<br>
-		その行為自体はたまたま偶然のこともあるが、「スナイプ」が迷惑行為と言われている理由は、特定の個人または対戦中の全員に対して、アンフェアな対戦を強いるからだ。<br><br>
-	
-		チーミング・敵味方関係なくプレイヤー同士が一緒になって（teamを組み）、相談しながらプレイすること。チームが別れた際にも敵の情報を共有したり、敵に有利な行動をしたりする。いわゆるスパイのような行動。<br><br>
-	
-		トロール・ネタや荒らし行為といった意味の「troll」が語源。相手を全く攻撃しない、味方を助けない、意図的にやられてしまうといった行動を指す。最初からやる気がない者もいれば、プレイの途中から何もしない者もいる。<br><br>
-	
-		AFK・「Away From Keyboard」の略で、席を離れる=ゲームを放置することを指す。回線切断するだけでなく、オンラインでもまったく動かないようかケースもAFKと呼ばれる。ちなみに、回線速度低下による一時的な離脱のような故意ではない行動もAFKとみなされるケースもある。<br><br>
+<h2 class="fade-in-text">カテゴリー</h2>
+		
+	<p>ライブ配信にはたくさんのカテゴリーがあります。ライバーとして活動する上で、配信内容は大切なポイントです。 ライブ配信の内容は、基本的に自由となっていますが、規約に反する内容はNGです。<br>
+		規約に反する内容とは、誰かを傷つけるような内容だったり、出会い系の目的で使用するといったことが挙げられます。<br>
+		コロナウイルスの影響で自宅で娯楽を楽しむ事が増えた2020年頃から配信の注目度が上がりました。ゲーム、雑談、音楽、食べ物、スポーツ、絵を描くなど<br>
+		自分の好きなこと・やっていることをコメントを通して共有し共感する。そういった楽しみ方が人気で「ゲーム」「雑談」「音楽」の3つが人気です。<br>
 	</p>
+<h3>ゲーム配信</h3>
+	<p>視聴者と一緒に盛り上がれるゲーム配信は配信の醍醐味ともいえるジャンルです。リスナーと配信者のやり取りが濃く、視聴者参加型で配信を行っていることも珍しくありません。
+	ゲーム配信者はゲームが上手な人が多いので、ゲームを上達したい人は参考になりますし、ゲームが苦手な人でも見ていて楽しむことができます。<br>
+	クリアするまで寝ないで配信を行う配信者も多く、リアルタイムでゲームをクリアするまでの苦労を見届けられるのも面白いところでしょう。<br>
+	コラボなどもしやすく大人数でのパーティゲームや二人での協力などゲームの1ジャンルでもたくさんの楽しみ方があります。
+	最近ではゲーム実況専門のライブ配信サービスも多くあり、自分に合った配信を探しやすいのも人気の理由の1つといえます。</p>
+
+<h3>雑談配信</h3>
+	<p>ツイキャスをはじめ生配信サービスで根強い人気を誇っている「雑談」話す内容は配信者によって異なり、日常生活の話をしたり視聴者の相談に乗ったりなど、特に縛りはありません。<br>
+		とはいえ、ただ話をしていても、視聴者が集まってくることはないのがライブ配信。視聴者から人気を集めている配信者は、何か企画を立てて雑談を行ったり、アニメやドラマなどに関する深い知識があったりなどテーマや特徴があります。<br>
+		インスタライブやTikTokライブなどでは顔を出して視聴者とコメントで語る配信がたくさんあります。スクロールで探せるのでいろんな人と出会えます。
+		不特定多数のさまざまな人が集まる配信だからこそ、普段の生活では触れ合うことのできない考え方に出会えるのも魅力の一つかもしれません。</p>
+
+<h3>音楽（歌・楽器演奏）</h3>
+	<p>配信を通して生歌を披露する・楽器演奏をするといったジャンルが「音楽」ジャンルです。歌枠では実際にライブを行う感覚でファンからコメントでリクエストをもらい、<br>
+		即興で歌います。楽器の演奏ができる配信者は弾き語りをしたり、楽器演奏のみを行ったりなど、さまざまなスタイルで視聴者を楽しませることが多いようです。<br>
+		お気に入りのライバーの歌・演奏が聴けるとあって、視聴者が集まってくるのがこのジャンル。「音楽」ジャンルが人気を博しているのは、歌ってみたの人気が高いことも影響を及ぼしているといえるでしょう。<br>
+		インターネットが普及した昨今では、音声デバイスの発展もめまぐるしく進んでいます。そのため、ネットを介した音声コンテンツの配信は世界的な成長を遂げており、<br>
+		音楽市場が注目されています。旧マスメディアではラジオ音声が代表とされていましたが、現在ではPococha、17LIVE、LINELIVEなど、さまざまな形態の声で配信や視聴ができるアプリが利用されています。</p>
 	
 <h3>配信の視聴者数が多いほど目立ちたいと言う理由から迷惑行為をするプレイヤーが増えます。絶対にやめましょう。</h3>
 
