--- a/service.html
+++ b/service.html
@@ -48,7 +48,7 @@
 
 <h2>概要欄</h2>
 <h1>概要欄は必ず読みましょう</h1>
-<p>概要欄は、配信者主が視聴者さんに守ってほしいというルールを基本的に作っています。<br>
+<p>概要欄は、配信者が視聴者さんに守ってほしいというルールを基本的に作っています。<br>
 	配信を円滑にするために必要なルールとマナーです。視聴者さんはこれらのルールに従ったうえで、チャットに参加する必要があります。<br>
 	配信者が楽しむと同時に、コメント欄での秩序が保てて視聴者同士でも楽しめるそういった環境になれるようにするためにも、必ず概要欄は読んで配信を視聴しましょう。<br>
 	概要欄だけでなく配信画面でもしっかりルールが書かれてあった場合でもしっかり読んでおいてくれるといいでしょう。<br>
@@ -94,7 +94,7 @@
 <h2>ゲーム配信</h2>
 	<h1>禁止行為</h1>
 	<p>ゴースティング・オンライン対戦ゲームにおいて、実況・ライブ配信映像を視聴しながら試合に参加し、プレイヤーを狙い撃ち、ゲームを自分に有利な方向に進める不正行為のこと。<br>
-		由来は幽霊の「ghost」特定のプレイヤーに対して執拗につきまとう様子を幽霊に例えられるから<br><br>
+		　　　　　由来は幽霊の「ghost」特定のプレイヤーに対して執拗につきまとう様子を幽霊に例えられるから<br><br>
 	
 		スナイプ・とは、特定のプレイヤーと同じマッチ内に入るのを意図的に狙うことを意味した言葉。本来の意味は「狙い撃つ」で、FPSなどで遠距離から敵を狙う「スナイパー」もこの言葉から来ている。<br>
 		その行為自体はたまたま偶然のこともあるが、「スナイプ」が迷惑行為と言われている理由は、特定の個人または対戦中の全員に対して、アンフェアな対戦を強いるからだ。<br><br>
