--- a/service.html
+++ b/service.html
@@ -52,8 +52,8 @@
 	配信を円滑にするために必要なルールとマナーです。視聴者さんはこれらのルールに従ったうえで、チャットに参加する必要があります。<br>
 	配信者が楽しむと同時に、コメント欄での秩序が保てて視聴者同士でも楽しめるそういった環境になれるようにするためにも、必ず概要欄は読んで配信を視聴しましょう。<br>
 	概要欄だけでなく配信画面でもしっかりルールが書かれてあった場合でもしっかり読んでおいてくれるといいでしょう。<br>
-	また、参加型の配信もあります、参加型の種類によっては、初めての人は禁止されている場合がありますし、事前にどういうことをすればいいのかが書かれてあります。<br>
-	チャットに自身のIDなどを明記してほしい場合もあります。<br>
+	また、参加型の配信もあります、参加型の種類によっては、初めての人は禁止されている場合があります。<br>
+	基本的に事前にどういうことをすればいいのかが書かれてあります。チャットに自身のIDなどを明記してほしい場合もあります。<br>
 
 </p>
 
@@ -61,7 +61,7 @@
 	
 <h2 class="fade-in-text">コミュニティガイドラインを確認する</h2>
 				
-	<p>コミュニティ ガイドラインは、コミュニティを安全に保つために作成されています。コミュニティガイドラインを見ることでで許可されること、禁止されることが定められており<br>
+	<p>コミュニティガイドラインは、コミュニティを安全に保つために作成されています。コミュニティガイドラインを見ることでで許可されること、禁止されることが定められており<br>
 		動画、コメント、リンク、サムネイルなど プラットフォーム上のあらゆる種類のコンテンツに適用されます。<br>
 		違反した場合、警告を受け、頻度が多い場合や3回以上の警告でアカウントの停止などの処置になる場合があります。<br>
 		コミュニティガイドラインはそれぞれのプラットフォームで規定されている内容が異なります。実際に視聴・配信するサイト、アプリのコミュニティガイドラインを確認しましょう。<br>
