--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
 <meta charset="UTF-8">
-<title>StreamGuid</title>
+<title>Streamer's Center</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="description" content="より配信を楽しむために">
 <link rel="stylesheet" href="css/style.css">
