--- a/search.html
+++ b/search.html
@@ -41,7 +41,7 @@
 <main>
 
 <section>
-		<h2 class="c"><span class="fade-in-text">配信者を探し方</span></h2>
+		<h2 class="c"><span class="fade-in-text">配信の探し方</span></h2>
 
 		<h1>Twitchタグ・カテゴリーの活用</h1>
 		<h3>ゲーム配信みたい人におすすめ</h3>
