--- a/service2.html
+++ b/service2.html
@@ -71,7 +71,7 @@
 	当事者が配信に来ることもあるので、オープンなコメント欄で、誰かが傷つく発言はやめましょう。もちろん雰囲気も悪くなります。
 	チャット欄が荒れていると、配信に来る人が減ってしまう要因になります。</p>
 
-<h2 class="fade-in-text">カテゴリー</h2>
+<h2>カテゴリー</h2>
 		
 	<p>ライブ配信にはたくさんのカテゴリーがあります。ライバーとして活動する上で、配信内容は大切なポイントです。 ライブ配信の内容は、基本的に自由となっていますが、規約に反する内容はNGです。<br>
 		規約に反する内容とは、誰かを傷つけるような内容だったり、出会い系の目的で使用するといったことが挙げられます。<br>
