--- a/service.html
+++ b/service.html
@@ -47,7 +47,7 @@
 <h2 class="c"><span class="fade-in-text">ルール</span><span class="hosoku">配信を見る上での注意点</span></h2>
 
 <h2>概要欄</h2>
-<h1>概要欄は必ず読みましょう</h1>
+<h3>概要欄は必ず読みましょう</h3>
 <p>概要欄は、配信者が視聴者さんに守ってほしいというルールを基本的に作っています。<br>
 	配信を円滑にするために必要なルールとマナーです。視聴者さんはこれらのルールに従ったうえで、チャットに参加する必要があります。<br>
 	配信者が楽しむと同時に、コメント欄での秩序が保てて視聴者同士でも楽しめるそういった環境になれるようにするためにも、必ず概要欄は読んで配信を視聴しましょう。<br>
@@ -60,7 +60,7 @@
 <section class="bg1">
 	
 <h2 class="fade-in-text">コミュニティガイドラインを確認する</h2>
-				
+<h3>公式が決めている利用者が守るべきルールや指針等をまとめたものです</h3>			
 	<p>コミュニティガイドラインは、コミュニティを安全に保つために作成されています。コミュニティガイドラインを見ることでで許可されること、禁止されることが定められており<br>
 		動画、コメント、リンク、サムネイルなど プラットフォーム上のあらゆる種類のコンテンツに適用されます。<br>
 		違反した場合、警告を受け、頻度が多い場合や3回以上の警告でアカウントの停止などの処置になる場合があります。<br>
@@ -74,6 +74,8 @@
 </section>
 
 <h2>ネットリテラシーを学ぶ</h2>
+<h3>インターネットの情報を正しく理解し、適切に判断、運用できる能力</h3>
+	
 <h1>リテラシー</h1>
 <p>動画配信・ライブ配信は基本的にはネットに存在するものです。<br>
 	ですので、不特定多数の人から見られている可能性があることを認識しなければなりません。<br>
@@ -92,6 +94,7 @@
 
 
 <h2>ゲーム配信</h2>
+<h3>配信者がプレイしているゲーム画面を配信すること</h3>
 	<h1>禁止行為</h1>
 	<p>ゴースティング・オンライン対戦ゲームにおいて、実況・ライブ配信映像を視聴しながら試合に参加し、プレイヤーを狙い撃ち、ゲームを自分に有利な方向に進める不正行為のこと。<br>
 		　　　　　由来は幽霊の「ghost」特定のプレイヤーに対して執拗につきまとう様子を幽霊に例えられるから<br><br>
