--- a/service2.html
+++ b/service2.html
@@ -46,6 +46,7 @@
 <h2 class="c"><span class="fade-in-text">コメント</span><span class="hosoku">見ている人とチャットで共有できます</span></h2>
 
 <h2>コメント欄</h2>
+<h3>リアルタイム意見や感想を共有する場所</h3>
 <p>ライブのコメント機能とは、視聴者がライブ配信を視聴しながらチャットを送ることができる機能です。チャットはリアルタイムで配信者と視聴者全員に公開され、配信を見ている人全員とコミュニケーションを取る事ができます。<br>
 	ライブ配信では、視聴者が送ったコメントに対して配信者が反応することで配信が展開していきます。<br>
 	例えば、雑談配信では視聴者のコメントから話題を広げる配信者は珍しくありません。視聴者のコメントによって、配信がリアルタイムで変化していくのです。<br>
@@ -72,6 +73,7 @@
 	チャット欄が荒れていると、配信に来る人が減ってしまう要因になります。</p>
 
 <h2>カテゴリー</h2>
+<h3>主な配信内容のジャンル分け</h3>
 		
 	<p>ライブ配信にはたくさんのカテゴリーがあります。ライバーとして活動する上で、配信内容は大切なポイントです。 ライブ配信の内容は、基本的に自由となっていますが、規約に反する内容はNGです。<br>
 		規約に反する内容とは、誰かを傷つけるような内容だったり、出会い系の目的で使用するといったことが挙げられます。<br>
