--- a/search.html
+++ b/search.html
@@ -44,7 +44,7 @@
 		<h2 class="c"><span class="fade-in-text">配信の探し方</span></h2>
 
 		<h1>Twitchタグ・カテゴリーの活用</h1>
-		<h3>ゲーム配信みたい人におすすめ</h3>
+		<h3>ゲーム配信をみたい人におすすめ</h3>
 		<img src="images/image1.png">
 		<p>Twitchはホーム画面からゲームのタイトルや配信カテゴリーで絞り込めます。またそのゲームの総視聴者数が見れるためどのゲームがTwitchの中での人気度がわかります。
 		</p>
@@ -59,7 +59,7 @@
 
 <section>
 	<h1>X(ハッシュタグ)機能の活用</h1>
-	<h3>新人やこれから配信を始める人が知りたい場合</h3>
+	<h3>新人やこれから配信を始める人が知りたい人</h3>
 	<p>「X」（旧ツイッター）は世界中で3億人以上のユーザーに使われています。10代～20代の若年層のユーザーが多いです。XはVtuber・Vライバーを探すのに適していると言えます。
 		Vtuberがデビューする際は、YoutubeアカウントとXアカウントの2つを基本的に開設しデビュー日などはXで公開することが多いです。また「#(ハッシュタグ)」を用いた検索をかけることで
 		これからデビューするであろう配信者を探すことができます。
