--- a/service.html
+++ b/service.html
@@ -14,7 +14,7 @@
 
 <header>
 
-<h1 id="logo"><a href="index.html">StreamGuid</a></h1>
+<h1 id="logo"><a href="index.html">Streamer's Center</a></h1>
 
 <!--開閉ブロック-->
 <div id="menubar">
